--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,7 +3,7 @@ name: Update Football Data
 on:
   schedule:
     # Run every day at 3 AM UTC
-    - cron: '0 * * * *'
+    - cron: '0,30 15-23,0-2 * * *'
   workflow_dispatch: # Allows manual trigger from GitHub UI
 
 jobs:
